--- a/css/main.css
+++ b/css/main.css
@@ -2,14 +2,20 @@
 	padding-top: 40px;
 }
 
-#todoList label{
-    width: 88%;
+#todoList label {
+	display: block;
+}
+
+#todoList button{
+    margin-left: auto !important;
 }
 #todoList li{
     list-style-type: none;
     margin-bottom: 9px;
 	border-bottom: 1px solid #eee;
 	padding-bottom: 5px;
+	display: flex;
+	align-items: center;
 }
 .completed{
 
